=== 3.3.6

* Shake out the latest Bundler integration issues

=== 3.3.0

* Require dependencies using Bundler
* Update to newer Tickly that has a faster parser

=== 3.2.2

* Bump a whole array of dependencies to speed up and simplify Nuke and Shake parsers

=== 3.2.1

* Improve Nuke 7 import support with the new version of Tickly

=== 3.2.0

* Add Nuke 7 import support

=== 3.1.0

* Add a Maxscript export module

=== 3.0.1

* Subtract 1 frame from PFTrack imports (PFTrack starts on 1)

=== 3.0.0

* Middleware renamed to Tools
* Multiple subpixel accuracy tests added
* Subpixel accuracy fixed for Syntheyes modules
* Subpixel accuracy fixed for PFTrack modules

=== 2.12.0

* Add an export module for Nuke's CameraTracker node. This is just like the Shake format, except that tracker names have to be special.

=== 2.11.3

* Hint that we only support specific nodes in Nuke
* Hint the user that a comp must be focused in AfterEffects when the import script is run without focusing on a comp first

=== 2.11.1

* Fixes a bug with importer snag display

=== 2.11.0

* This release adds a Softimage|XSI export module which outputs a Python script with moving nulls on an image plane

=== 2.10.0

* Nuke importer now supports PlanarTracker nodes and their corner-pin output

=== 2.9.9

* Add lens distortion tool. Adds the possibility to remove or add Syntheyes lens distortion to your plates.

=== 2.9.8

* Ensure that Boujou vertical coords start off 1, not off 0 - both in import and export

=== 2.9.7

* Add Syntheyes "All tracker paths" support

=== 2.9.6

* Add Nuke Reconcile3D support
* Add Tool::Base.parameters for automatic GUI building

=== 2.9.5

* Export a Maya ASCII scene instead of a MEL script

=== 2.9.4

* Add MatchMover RZML import support
* Export Boujou trackers starting at frame 0, not at frame 1

=== 2.9.3

* Add export for AE null layers as a .jsx script

=== 2.9.2
